@@ -1,3 +1,9 @@
+Mon Jan 14 13:59:18 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* src/mandb.c (xcopy): Set the new file's mode to DBMODE in order to
+	  try to defend against strange problems with databases being left
+	  world-unreadable (Debian bug #430800).
+
 Mon Jan 14 00:55:22 GMT 2008  Colin Watson  <cjwatson@debian.org>
 
 	* man/po4a/po/man-db.pot: Update.
